--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-    transition: background-color 0.5s ease;
 }
 
 .navbar {
@@ -12,7 +11,6 @@ body {
     justify-content: space-around;
     align-items: center;
     padding: 0.5em 0;
-    transition: background-color 0.5s ease;
 }
 
 .navbar a {
@@ -21,7 +19,7 @@ body {
     padding: 10px 15px;
     text-decoration: none;
     cursor: pointer;
-    transition: background-color 0.5s ease, color 0.5s ease;
+    transition: color 0.3s, background-color 0.3s;
 }
 
 .navbar a:hover {
@@ -36,18 +34,12 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     opacity: 0;
     transform: translateY(20px);
-    display: none;
-    transition: opacity 0.5s ease, transform 0.5s ease;
+    transition: opacity 0.5s, transform 0.5s;
 }
 
 .section.visible, .subsection.visible {
     opacity: 1;
     transform: translateY(0);
-    display: block;
-}
-
-.subsection {
-    transition-delay: 0.5s;
 }
 
 .image img {
@@ -55,7 +47,6 @@ body {
     height: auto;
     display: block;
     margin: 0 auto;
-    transition: opacity 0.5s ease;
 }
 
 .nba-logo {
@@ -70,7 +61,6 @@ header, footer {
     color: #fff;
     text-align: center;
     padding: 1em;
-    transition: background-color 0.5s ease;
 }
 
 header {
